# mlp-playground

./: .gitignore  AIPlaying4.sln  AIPlaying4.vcxproj  AIPlaying4.vcxproj.filters  CMakeLists.txt  README.md  main.cpp
include/: layer.h  matrix.h  mnist_loader.h  neural_network.h  vector_utils.h
src/: layer.cpp  matrix.cpp  mnist_loader.cpp  neural_network.cpp  vector_utils.cpp
